packages/dartcv/src/imgproc/imgproc.h


CvStatus* cv_bilateralFilter(Mat src, Mat dst, int d, double sc, double ss, CvCallback_0 callback);
CvStatus* cv_blur(Mat src, Mat dst, CvSize ps, CvCallback_0 callback);
CvStatus* cv_boxFilter(
    Mat src,
    Mat dst,
    int ddepth,
    CvSize ps,
    CvPoint anchor,
    bool normalize,
    int borderType,
    CvCallback_0 callback
);
CvStatus* cv_dilate(Mat src, Mat dst, Mat kernel, CvCallback_0 callback);
CvStatus* cv_dilate_1(
    Mat src,
    Mat dst,
    Mat kernel,
    CvPoint anchor,
    int iterations,
    int borderType,
    Scalar borderValue,
    CvCallback_0 callback
);
CvStatus* cv_erode(Mat src, Mat dst, Mat kernel, CvCallback_0 callback);
CvStatus* cv_erode_1(
    Mat src,
    Mat dst,
    Mat kernel,
    CvPoint anchor,
    int iterations,
    int borderType,
    Scalar borderValue,
    CvCallback_0 callback
);
CvStatus* cv_filter2D(
    Mat src,
    Mat dst,
    int ddepth,
    Mat kernel,
    CvPoint anchor,
    double delta,
    int borderType,
    CvCallback_0 callback
);
CvStatus* cv_adaptiveThreshold(
    Mat src,
    Mat dst,
    double maxValue,
    int adaptiveTyp,
    int typ,
    int blockSize,
    double c,
    CvCallback_0 callback
);
CvStatus* cv_distanceTransform(
    Mat src,
    Mat dst,
    Mat labels,
    int distanceType,
    int maskSize,
    int labelType,
    CvCallback_0 callback
);
CvStatus* cv_arrowedLine(
    Mat img,
    CvPoint pt1,
    CvPoint pt2,
    Scalar color,
    int thickness,
    int line_type,
    int shift,
    double tipLength,
    CvCallback_0 callback
);
CvStatus* cv_circle(
    Mat img, CvPoint center, int radius, Scalar color, int thickness, CvCallback_0 callback
);
CvStatus* cv_circle_1(
    Mat img,
    CvPoint center,
    int radius,
    Scalar color,
    int thickness,
    int lineType,
    int shift,
    CvCallback_0 callback
);
CvStatus* cv_clipLine(CvRect imgRect, CvPoint pt1, CvPoint pt2, bool* rval, CvCallback_0 callback);
CvStatus* cv_drawContours(
    Mat src,
    VecVecPoint contours,
    int contourIdx,
    Scalar color,
    int thickness,
    CvCallback_0 callback
);
CvStatus* cv_drawContours_1(
    Mat src,
    VecVecPoint contours,
    int contourIdx,
    Scalar color,
    int thickness,
    int lineType,
    Mat hierarchy,
    int maxLevel,
    CvPoint offset,
    CvCallback_0 callback
);
CvStatus* cv_ellipse(
    Mat img,
    CvPoint center,
    CvPoint axes,
    double angle,
    double startAngle,
    double endAngle,
    Scalar color,
    int thickness,
    CvCallback_0 callback
);
CvStatus* cv_ellipse_1(
    Mat img,
    CvPoint center,
    CvPoint axes,
    double angle,
    double startAngle,
    double endAngle,
    Scalar color,
    int thickness,
    int lineType,
    int shift,
    CvCallback_0 callback
);
CvStatus* cv_fillPoly(Mat img, VecVecPoint points, Scalar color, CvCallback_0 callback);
CvStatus* cv_fillPoly_1(
    Mat img,
    VecVecPoint points,
    Scalar color,
    int lineType,
    int shift,
    CvPoint offset,
    CvCallback_0 callback
);
CvStatus* cv_cvtColor(Mat src, CVD_OUT Mat dst, int code, CvCallback_0 callback);
CvStatus* cv_applyColorMap_1(Mat src, Mat dst, Mat colormap, CvCallback_0 callback);
CvStatus* cv_applyColorMap(Mat src, Mat dst, int colormap, CvCallback_0 callback);
CvStatus* cv_calcBackProject(
    VecMat mats,
    VecI32 chans,
    Mat hist,
    CVD_OUT Mat backProject,
    VecF32 rng,
    double scale,
    CvCallback_0 callback
);
CvStatus* cv_calcHist(
    VecMat mats,
    VecI32 chans,
    Mat mask,
    CVD_OUT Mat hist,
    VecI32 sz,
    VecF32 rng,
    bool acc,
    CvCallback_0 callback
);
CvStatus* cv_compareHist(
    Mat hist1, Mat hist2, int method, CVD_OUT double* rval, CvCallback_0 callback
);
CvStatus* cv_equalizeHist(Mat src, CVD_OUT Mat dst, CvCallback_0 callback);
CvStatus* cv_approxPolyDP(
    VecPoint curve, double epsilon, bool closed, CVD_OUT VecPoint* rval, CvCallback_0 callback
);
CvStatus* cv_arcLength(VecPoint curve, bool is_closed, CVD_OUT double* rval, CvCallback_0 callback);
CvStatus* cv_boundingRect(VecPoint pts, CvRect* rval, CvCallback_0 callback);
CvStatus* cv_boxPoints(RotatedRect rect, VecPoint2f* boxPts, CvCallback_0 callback);
CvStatus* cv_connectedComponents(
    Mat src, Mat dst, int connectivity, int ltype, int ccltype, int* rval, CvCallback_0 callback
);
CvStatus* cv_connectedComponents_1(
    Mat src,
    Mat labels,
    Mat stats,
    Mat centroids,
    int connectivity,
    int ltype,
    int ccltype,
    int* rval,
    CvCallback_0 callback
);
CvStatus* cv_contourArea(VecPoint pts, double* rval, CvCallback_0 callback);
CvStatus* cv_convexHull(
    VecPoint points, CVD_OUT Mat hull, bool clockwise, bool returnPoints, CvCallback_0 callback
);
CvStatus* cv_convexityDefects(VecPoint points, Mat hull, Mat result, CvCallback_0 callback);
CvStatus* cv_findContours(
    Mat src, VecVecPoint* out_contours, VecVec4i* out_hierarchy, int mode, int method, CvCallback_0 callback
);
CvStatus* cv_fitEllipse(VecPoint pts, RotatedRect* rval, CvCallback_0 callback);
CvStatus* cv_fitLine(
    VecPoint pts,
    Mat line,
    int distType,
    double param,
    double reps,
    double aeps,
    CvCallback_0 callback
);
CvStatus* cv_accumulatedWeighted_1(Mat src, Mat dst, double alpha, Mat mask, CvCallback_0 callback);
CvStatus* cv_canny(
    Mat src,
    Mat edges,
    double t1,
    double t2,
    int apertureSize,
    bool l2gradient,
    CvCallback_0 callback
);
CvStatus* cv_cornerSubPix(
    Mat img,
    VecPoint2f corners,
    CvSize winSize,
    CvSize zeroZone,
    TermCriteria criteria,
    CvCallback_0 callback
);