lib/src/g/imgproc.g.dart


@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, Mat, ffi.Double, Mat, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_accumulatedWeighted_1(
  Mat src,
  Mat dst,
  double alpha,
  Mat mask,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Double, ffi.Int, ffi.Int,
        ffi.Int, ffi.Double, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_adaptiveThreshold(
  Mat src,
  Mat dst,
  double maxValue,
  int adaptiveTyp,
  int typ,
  int blockSize,
  double c,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_applyColorMap(
  Mat src,
  Mat dst,
  int colormap,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_applyColorMap_1(
  Mat src,
  Mat dst,
  Mat colormap,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(VecPoint, ffi.Double, ffi.Bool,
        ffi.Pointer<VecPoint>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_approxPolyDP(
  VecPoint curve,
  double epsilon,
  bool closed,
  ffi.Pointer<VecPoint> rval,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        VecPoint, ffi.Bool, ffi.Pointer<ffi.Double>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_arcLength(
  VecPoint curve,
  bool is_closed,
  ffi.Pointer<ffi.Double> rval,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, CvPoint, CvPoint, Scalar, ffi.Int,
        ffi.Int, ffi.Int, ffi.Double, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_arrowedLine(
  Mat img,
  CvPoint pt1,
  CvPoint pt2,
  Scalar color,
  int thickness,
  int line_type,
  int shift,
  double tipLength,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, Mat, ffi.Int, ffi.Double, ffi.Double, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_bilateralFilter(
  Mat src,
  Mat dst,
  int d,
  double sc,
  double ss,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, Mat, CvSize, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_blur(
  Mat src,
  Mat dst,
  CvSize ps,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        VecPoint, ffi.Pointer<CvRect>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_boundingRect(
  VecPoint pts,
  ffi.Pointer<CvRect> rval,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int, CvSize, CvPoint, ffi.Bool,
        ffi.Int, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_boxFilter(
  Mat src,
  Mat dst,
  int ddepth,
  CvSize ps,
  CvPoint anchor,
  bool normalize,
  int borderType,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        RotatedRect, ffi.Pointer<VecPoint2f>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_boxPoints(
  RotatedRect rect,
  ffi.Pointer<VecPoint2f> boxPts,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        VecMat, VecI32, Mat, Mat, VecF32, ffi.Double, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_calcBackProject(
  VecMat mats,
  VecI32 chans,
  Mat hist,
  Mat backProject,
  VecF32 rng,
  double scale,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(VecMat, VecI32, Mat, Mat, VecI32, VecF32,
        ffi.Bool, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_calcHist(
  VecMat mats,
  VecI32 chans,
  Mat mask,
  Mat hist,
  VecI32 sz,
  VecF32 rng,
  bool acc,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Double, ffi.Double, ffi.Int,
        ffi.Bool, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_canny(
  Mat src,
  Mat edges,
  double t1,
  double t2,
  int apertureSize,
  bool l2gradient,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, CvPoint, ffi.Int, Scalar, ffi.Int, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_circle(
  Mat img,
  CvPoint center,
  int radius,
  Scalar color,
  int thickness,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, CvPoint, ffi.Int, Scalar, ffi.Int,
        ffi.Int, ffi.Int, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_circle_1(
  Mat img,
  CvPoint center,
  int radius,
  Scalar color,
  int thickness,
  int lineType,
  int shift,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        CvRect, CvPoint, CvPoint, ffi.Pointer<ffi.Bool>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_clipLine(
  CvRect imgRect,
  CvPoint pt1,
  CvPoint pt2,
  ffi.Pointer<ffi.Bool> rval,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, Mat, ffi.Int, ffi.Pointer<ffi.Double>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_compareHist(
  Mat hist1,
  Mat hist2,
  int method,
  ffi.Pointer<ffi.Double> rval,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int, ffi.Int, ffi.Int,
        ffi.Pointer<ffi.Int>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_connectedComponents(
  Mat src,
  Mat dst,
  int connectivity,
  int ltype,
  int ccltype,
  ffi.Pointer<ffi.Int> rval,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, Mat, ffi.Int, ffi.Int,
        ffi.Int, ffi.Pointer<ffi.Int>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_connectedComponents_1(
  Mat src,
  Mat labels,
  Mat stats,
  Mat centroids,
  int connectivity,
  int ltype,
  int ccltype,
  ffi.Pointer<ffi.Int> rval,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        VecPoint, ffi.Pointer<ffi.Double>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_contourArea(
  VecPoint pts,
  ffi.Pointer<ffi.Double> rval,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        VecPoint, Mat, ffi.Bool, ffi.Bool, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_convexHull(
  VecPoint points,
  Mat hull,
  bool clockwise,
  bool returnPoints,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(VecPoint, Mat, Mat, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_convexityDefects(
  VecPoint points,
  Mat hull,
  Mat result,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, VecPoint2f, CvSize, CvSize, TermCriteria, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_cornerSubPix(
  Mat img,
  VecPoint2f corners,
  CvSize winSize,
  CvSize zeroZone,
  TermCriteria criteria,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_cvtColor(
  Mat src,
  Mat dst,
  int code,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_dilate(
  Mat src,
  Mat dst,
  Mat kernel,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, Mat, Mat, CvPoint, ffi.Int, ffi.Int, Scalar, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_dilate_1(
  Mat src,
  Mat dst,
  Mat kernel,
  CvPoint anchor,
  int iterations,
  int borderType,
  Scalar borderValue,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, Mat, Mat, ffi.Int, ffi.Int, ffi.Int, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_distanceTransform(
  Mat src,
  Mat dst,
  Mat labels,
  int distanceType,
  int maskSize,
  int labelType,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, VecVecPoint, ffi.Int, Scalar, ffi.Int, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_drawContours(
  Mat src,
  VecVecPoint contours,
  int contourIdx,
  Scalar color,
  int thickness,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, VecVecPoint, ffi.Int, Scalar, ffi.Int,
        ffi.Int, Mat, ffi.Int, CvPoint, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_drawContours_1(
  Mat src,
  VecVecPoint contours,
  int contourIdx,
  Scalar color,
  int thickness,
  int lineType,
  Mat hierarchy,
  int maxLevel,
  CvPoint offset,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, CvPoint, CvPoint, ffi.Double,
        ffi.Double, ffi.Double, Scalar, ffi.Int, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_ellipse(
  Mat img,
  CvPoint center,
  CvPoint axes,
  double angle,
  double startAngle,
  double endAngle,
  Scalar color,
  int thickness,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat,
        CvPoint,
        CvPoint,
        ffi.Double,
        ffi.Double,
        ffi.Double,
        Scalar,
        ffi.Int,
        ffi.Int,
        ffi.Int,
        imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_ellipse_1(
  Mat img,
  CvPoint center,
  CvPoint axes,
  double angle,
  double startAngle,
  double endAngle,
  Scalar color,
  int thickness,
  int lineType,
  int shift,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_equalizeHist(
  Mat src,
  Mat dst,
  imp1.CvCallback_0 callback,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_erode(
  Mat src,
  Mat dst,
  Mat kernel,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, Mat, Mat, CvPoint, ffi.Int, ffi.Int, Scalar, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_erode_1(
  Mat src,
  Mat dst,
  Mat kernel,
  CvPoint anchor,
  int iterations,
  int borderType,
  Scalar borderValue,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        Mat, VecVecPoint, Scalar, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_fillPoly(
  Mat img,
  VecVecPoint points,
  Scalar color,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, VecVecPoint, Scalar, ffi.Int, ffi.Int,
        CvPoint, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_fillPoly_1(
  Mat img,
  VecVecPoint points,
  Scalar color,
  int lineType,
  int shift,
  CvPoint offset,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Int, Mat, CvPoint, ffi.Double,
        ffi.Int, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_filter2D(
  Mat src,
  Mat dst,
  int ddepth,
  Mat kernel,
  CvPoint anchor,
  double delta,
  int borderType,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(Mat, ffi.Pointer<VecVecPoint>,
        ffi.Pointer<VecVec4i>, ffi.Int, ffi.Int, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_findContours(
  Mat src,
  ffi.Pointer<VecVecPoint> out_contours,
  ffi.Pointer<VecVec4i> out_hierarchy,
  int mode,
  int method,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        VecPoint, ffi.Pointer<RotatedRect>, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_fitEllipse(
  VecPoint pts,
  ffi.Pointer<RotatedRect> rval,
  imp1.CvCallback_0 callback,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(VecPoint, Mat, ffi.Int, ffi.Double,
        ffi.Double, ffi.Double, imp1.CvCallback_0)>()
external ffi.Pointer<CvStatus> cv_fitLine(
  VecPoint pts,
  Mat line,
  int distType,
  double param,
  double reps,
  double aeps,
  imp1.CvCallback_0 callback,
);
